Rinominato 10 in classificatori

--- a/10.Classificatori.md
+++ b/10.Classificatori.md
@@ -1,9 +1,9 @@
-# Reti neurali
+# Sistemi a classificatore CS
+
+## Reti neurali
 
 È un approccio alternativo a quello simbolico (o forse complementare). Non lavorano sulla base di inferenza.
 È un altro sistema bioispirato. Non danno spiegazioni.
-
-## Sistemi a classificatori (CS)
 
 Sono sistemi che apprendono a svolgere un compito interagendo con un ambiente parzialmente ignoto usando meccanismi
 di feedback per guidare un processo evolutivo interno che modifica il proprio modello del mondo.
@@ -85,3 +85,30 @@ Le regole così nate vengono aggiunte a quelle esistenti, e le rafforzo un po' p
 
 Ad ogni giro di GA aggiungo 20 figli (quello che mi interessa) e lascio che il bucket brigade lavori di nuovo.
 
+Se le nuove sono utili vengono ricompensate dal sistema, altrimenti vengono scartate.
+
+Il GA è utile per generare regole e per eliminare quelle meno utili.
+
+Il sistema è stostatico, ed ha i vantaggi del GA (non si perde nei minimi locali etc.).
+Qual è la funzione da ottimizzare? Di fatto non c'è: è una sorta di co-evoluzione. L'algoritmo è interessante anche
+dal punto di vista biologico.
+
+### Cover detector
+
+Se nessun classificatore fa match, allora creo delle regole casuali che matchano con gli effettori e con la
+parte di azione casuale. In modo che il sistema possa partire.
+
+### Cover effector
+
+$%TODO$
+
+Il sistema è interessante perché mette insieme simbolico e non simbolico. Metafora economica (apprendimento a breve
+termine) e metafora biologica (per l'apprendimento a lungo termine).
+
+Le regole sono **agenti in un mercato**, che sono semplici: stringhe di simboli tratti da un alfabeto molto semplice.
+Nascono spontaneamente catene di regole che si affermano.
+
+Problemi possibili: convergenza prematura delle soluzioni poco soddisfacenti. Ma questo è un limite anche delle nostre
+teorie evoluzionistiche per cui non ci riusciamo a spiegare come faccia la natura a evolvere continuamente.
+
+L'inquietudine di questi sistemi è legata al fatto che possono essere create regole nuove.
