--- a/7.Algoritmi-Genetici.md
+++ b/7.Algoritmi-Genetici.md
@@ -8,7 +8,7 @@ Invece Darwin dice una cosa simile ma differente: le caratteristiche che emergon
 per la sopravvivenza. Sopravvive chi ha più possibilità: quindi se un individuo corre più veloce e questo gli
 garantisce un vantaggio (se vive nel Serengeti è non essere mangiato) allora sopravvivrà.
 
-Inoltre i cambuamenti che avvengono in vita a un individuo non sono ereditabili.
+Inoltre i cambiamenti che avvengono in vita a un individuo non sono ereditabili.
 Le specie cambiano perché ci sono differenze fra gli individui, fin dalla nascita.
 
 Chi arriva all'età matura si riproduce e trasmette i propri geni ai figli. L'evoluzione non è così veloce
@@ -57,7 +57,7 @@ Sto decodificando ogni stringa della mia popolazione in esame. Questa è pressio
 Di solito l'evoluzione massimizza. Per trasformare un problema di minimo in massimo posso invertire la fitness, oppure
 penso a un numero molto grande a cui la fitness non arriverà mai e tolgo g(x).
 
-## Scegliere chi si evolve
+## Scegliere chi si evolve
 
 Devo lanciare una moneta, o più precisamente giocare alla roulette. Questo è il metodo Monte Carlo.
 
