--- a/7.Algoritmi-Genetici.md
+++ b/7.Algoritmi-Genetici.md
@@ -1,5 +1,16 @@
 # Algoritmi genetici
 
+## Scale differenti
+
+**Apprendere** significa modificare sè stessi in risposta ad opportuni stimoli. In natura
+ci sono molti sistemi capaci di fare questo (sistema immunitario, cervello, colonie di insetti).
+
+Si apprende su scale temporali differenti: nel corso di una vita un'individuo apprende in risposta
+agli stimoli che riceve. Ma anche nell'evoluzione le specie singole _apprendono_ implicitamente
+dalle caratteristiche del proprio ambiente.
+
+Dal punto di vista astratto sono abbastanza simili.
+
 Le ipotesi di Lamarck non sono troppo differenti rispetto a Darwin.
 I caratteri appresi nella vita possono essere trasmessi alla prole, l'apprendimento in vita
 è il motore dell'evoluzione.
