--- a/1.Agents.md
+++ b/1.Agents.md
@@ -3,6 +3,8 @@
 Sistemi multiagente: emergono sovrastrutture, ad esempio il web dove sono emerse isole e zone dove si diffonde
 la conoscenza che non erano nella mente di chi l'ha pensato.
 
+![Web structure](https://www.researchgate.net/profile/Glen-Barry/publication/228715114/figure/fig4/AS:651542550024194@1532351257264/The-Continents-of-the-World-Wide-Web.png)
+
 Emergenza: come utilizzarla per far emergere le sovrastrutture in modo controllato.
 
 ## Definizione
@@ -41,7 +43,7 @@ interni perché elaboriamo e reagiamo a quello che ci succede.
 
 L'agente è un'unità computazionale; devo tenere in considerazione tutte le parti.
 Tutto ciò che non è agente è **ambiente**, e l'agente vive e percepisce nell'ambiente. Importantissimo!
-Mentre progetto all'agente, anche se non ho pensato allo scambio di informazioni con l'ambiente, questo
+Mentre progetto l'agente, anche se non ho pensato allo scambio di informazioni con l'ambiente, questo
 non vuol dire che non avverrà.
 
 Il potere che dò all'agente sono gli scopi e le regole in cui agire. Praticamente il potere di ingaggio.
@@ -51,7 +53,7 @@ Il potere che dò all'agente sono gli scopi e le regole in cui agire. Praticamen
 Gli agenti sono le persone delle società artificiali. Ogni agente ha degli stati interni e delle regole comportamentali
 che possono cambiare con l'interazione con altri agenti, oppure rimanere fissi.
 
-Gli stati posso essere costanti o variabili. Nozione più adatti per i sistemi multiagente.
+Gli stati posso essere costanti o variabili. Nozione più adatta per i sistemi multiagente.
 
 Spesso gli agenti costituiscono l'ambiente degli altri agenti. Lo scambio di informazione è anche non esplicito.
 
@@ -108,7 +110,7 @@ Finora abbiamo agentizzato molte cose:
 - il programma non accetta questo tipo di dato (ci immaginiamo un programma irritato)
 
 noi viviamo in un mondo di agenti e queste frasi sono molto efficaci. Però il database non vuole fisicamente qualcosa.
-Posizionale intenzionale.
+Posizione intenzionale.
 
 Noi siamo convinti che il nostro agente sia autonomo, che è la nozione più ambigua incontrata finora.
 Spesso l'autonomia è limitata. Non c'è nulla di veramente autonomo, però ci saranno dei programmi che ci sorprendono e che
@@ -141,7 +143,7 @@ Devo disegnare un agente, che architetture posso usare per disegnare un agente?
 
     [Logic Theory Machine](https://en.wikipedia.org/wiki/Logic_Theorist)
 
-- reactive: la decisione è relaizzata come mappature tra azione e situazione.
+- reactive: la decisione è realizzata come mappature tra azione e situazione.
 
 - belief-desire-intention (BDI):
     ho delle credenze sull'ambiente (percezioni), ciò che penso che l'ambiente sia
