--- a/10.Classificatori.md
+++ b/10.Classificatori.md
@@ -67,7 +67,7 @@ crescente del bid (tipicamente direttamente proporzionale al bid).
 
 Tutto il sistema lavora con una metafora di tipo economico. L'effettore ricompensa il classificatore che ha postato
 un messaggio buono, ma il $C_i$ sa che non è solo merito suo quindi ricompensa tutti i classificatori che hanno
-partecipato e hanno aiutato (qui finisce la metafora economica perché il valore ).
+partecipato e hanno aiutato.
 
 Questo è chiamato bucket brigade (vigili del fuoco).
 
@@ -95,12 +95,19 @@ dal punto di vista biologico.
 
 ### Cover detector
 
-Se nessun classificatore fa match, allora creo delle regole casuali che matchano con gli effettori e con la
-parte di azione casuale. In modo che il sistema possa partire.
+Quando si parte generando dei classificatori casuali, nessuno di questi potrebbe matchare con i messaggi dei detettori,
+non producendo alcun messaggio per gli effettori; in questo modo l'algoritmo di bucket brigade non riesce a ricevere
+alcun compenso e la fase di apprendimento non può avvenire. Anche per l'apprendimento a lungo termine (GA) non si hanno
+informazioni utili, la forza, per generare nuove regole.
+
+Se nessun classificatore fa match, allora creo delle regole casuali che matchano con i messaggi dei detettori e con
+la parte di azione casuale, in modo che il sistema possa partire.
 
 ### Cover effector
 
-$%TODO$
+Se un messaggio ha attivato un classificatore, ma nessun effettore viene attivato, l'operatore di cover effector crea
+un nuovo classificatore in cui la condizione è uguale a quella del classificatore che si è attivato, e la parte di azione
+attiva un effettore random.
 
 Il sistema è interessante perché mette insieme simbolico e non simbolico. Metafora economica (apprendimento a breve
 termine) e metafora biologica (per l'apprendimento a lungo termine).
