--- a/11.Reti-Neurali.md
+++ b/11.Reti-Neurali.md
@@ -1,4 +1,4 @@
-# Reti neurali
+# Reti neurali
 
 > Domare gli attrattori
 
@@ -33,7 +33,7 @@ Siamo anche robusti a fallimenti di neuroni.
 Di McCulloch e Pitts
 
 Primo modello di neurone simulato, rete neurale.
-Il modello che usano è molto semplice: ha tanti link che gli arrivano, se la somma è sotto una certa soglia $\theta$ lui
+Il modello che usano è molto semplice: ha tanti link che gli arrivano, se la somma è sopra una certa soglia $\theta$ lui
 emette segnale. I livelli sono sempre 2: 0 e 1, o -1 e 1.
 
 A ogni link in ingresso è associato un peso, che determina l'intesità del segnale in arrivo.
