--- a/2.Multiagents.md
+++ b/2.Multiagents.md
@@ -47,7 +47,7 @@ sensore, repliche, sistemi mobili...
 A volte l'ambiente è fisico, come nel caso del controllo ambientale oppure un ambiente simulato
 come il database.
 
-## Gestione risorse
+## Gestione risorse
 
 Ogni agente è specializzato nel massimizzare lo sfruttamento di una risorsa specifica. Si sfrutta
 un modello di tipo economico.
@@ -80,6 +80,6 @@ comportamento scaturisce dalle scelte individuali?). Epidemie.
 
 In Batman Begins i pipistrelli erano uno sciame (scopo generale: gira intorno a Batman).
 
-Il mondo degli agenti è enormi: ottimizzazione, quando non si riesce ad avere una forma matematica
+Il mondo degli agenti è enorme: ottimizzazione, quando non si riesce ad avere una forma matematica
 questa è la cosa migliore. Algoritmi genetici o formiche. Dei 4 migliori ottimizzatori i tre migliori
 sono stocastici.
