--- a/3.Collective-Entities.md
+++ b/3.Collective-Entities.md
@@ -3,14 +3,14 @@
 ## Swarm intelligence.
 
 L'entità importante non è un singolo agente ma il comportamento
-che emerge da tutto lo sciamo. Api, formiche etc.
+che emerge da tutto lo sciame. Api, formiche etc.
 
 Dov'è l'intelligenza in questi sistemi? Non è in alcun agente specifico (regina dell'alveare).
 
 ## Definizione
 
 Proprietà di un sistema in cui il comportamento collettivo di agenti (non sofisticati) che interagiscono
-localmente con l'ambiente produce l'emergere di pattern funzionali globali nel sistemi.
+localmente con l'ambiente produce l'emergere di pattern funzionali globali nel sistema.
 
 - Gli individui sono relativamente semplici, cosa vede la formica? Quasi niente. Quanti neuroni hanno?
     Solo 250.000, mentre noi ne abbiamo 23 miliardi;
@@ -104,7 +104,7 @@ Complesso significa proprio che ho feedback positivi e negativi in contemporanea
 
 Gli individui fanno **tipicamente** alcune mosse, per cui ogni tanto qualcuno fa altro.
 
-La conseguenza della casualità è l'**adattibilità**, a volte la risposta è anche vantaggiosa.
+La conseguenza della casualità è l'**adattabilità**, a volte la risposta è anche vantaggiosa.
 
 Come sarà alla fine il sistema? _Non lo so_. So però che sarà la configurazione migliore possibile, per la
 situazione attuale, senza averla prevista.
@@ -114,11 +114,11 @@ Se siamo tanti, il _gioco_ dei feedback funziona. Se ci sono solo 2/3 agent non 
 Più si è e meglio si funziona. Ad esempio se dobbiamo sincronizzare degli orologi in un sistema peer to peer.
 In un sistema umano invece più si è più ci vuole energia per mantenerli operativi.
 
-## La massa
+## La massa
 
 Permette di esplorare vaste aree dell'ambiente di ricerca.
 
-Tollera malfunzionamenti locali (il componente non dipende da una singola componente).
+Tollera malfunzionamenti locali (il comportamento non dipende da una singola componente).
 
 Permette l'adattività, mentre molti agenti fanno il proprio lavoro altri possono essere "persi" alla ricerca
 di soluzioni alternative.
@@ -145,7 +145,7 @@ portare a
 
 ## Chi esibisce swarm intelligence?
 
-In natura li vediamo in api, formiche e termiti che sono semplici. Anche negli uccelli che sono molto
+In natura la vediamo in api, formiche e termiti che sono semplici. Anche negli uccelli che sono molto
 sviluppati, ed esseri ancora più evoluti mostrano swarm intelligence.
 
 I castori esibiscono swarm intelligence, ma nessuno ha il progetto. Le loro dighe hanno degli sfiatatoi.
