--- a/5.Swarm.md
+++ b/5.Swarm.md
@@ -1,7 +1,7 @@
 # Simulare swarm intelligence
 
 Il dictyiostelium è un organismo unicellulare che quando il cibo è scarso si aggrega in un'unica
-grande coloia che agisce come un organismo unico. Muovendosi come una grande ameba hanno capacità
+grande colonia che agisce come un organismo unico. Muovendosi come una grande ameba hanno capacità
 motorie superiori.
 
 Quando sono soddisfatti si disesgrano. Sfrutteremo questa idea per implementare i nostri meccanismi.
@@ -29,7 +29,7 @@ Il dyctyostelium usa un solo tipo di feromone, noi possiamo usarne di più nella
 Nei cieli non sono i grandi cacciatori come aquile, falchi, condor, ma gli stormi che si aggregano
 e spaventano gli uccelli solitari.
 
-Nei mari sono i banchi di arringhe, che possono arrivare fino a 150km.
+Nei mari sono i banchi di aringhe, che possono arrivare fino a 150km.
 
 ## Boids
 
