--- a/11.Reti-Neurali.md
+++ b/11.Reti-Neurali.md
@@ -97,9 +97,9 @@ i pesi come segue:
 
 $$
 \begin{cases}
-y = y_d \Rightarrow W(k+1) = W(k)
-y \lt y_d \Rightarrow W(k+1) = W(k) + \epsilon x
-y \gt y_d \Rightarrow W(k+1) = W(k) - \epsilon x
+y = y_d \Rightarrow W(k+1) = W(k) \\
+y \lt y_d \Rightarrow W(k+1) = W(k) + \epsilon x \\
+y \gt y_d \Rightarrow W(k+1) = W(k) - \epsilon x \\
 \end{cases}
 $$
 
